--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ DJANGO_LANGUAGE_CODE=en-us
 DJANGO_TIME_ZONE=UTC
 DJANGO_SESSION_COOKIE_SECURE=false
 DJANGO_CSRF_COOKIE_SECURE=false
+DJANGO_CSRF_TRUSTED_ORIGINS=
 DJANGO_SECURE_SSL_REDIRECT=false
 DJANGO_EMAIL_HOST=localhost
 DJANGO_EMAIL_PORT=25
