--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   postgres:
     image: postgres:15
     env_file: .env
+#    environment:
+#      - "DJANGO_ALLOWED_HOSTS=real.domain.com"
+#      - "DJANGO_CSRF_TRUSTED_ORIGINS=https://real.domain.com"
     volumes:
       - "postgres-data:/var/lib/postgresql/data/"
 
